update all EDA file names

--- a/Dataset and Script Guide.html
+++ b/Dataset and Script Guide.html
@@ -465,7 +465,7 @@
 </div></code></pre>
 	<h2 id="running-the-workflow">Running the Workflow</h2>
 	<ul>
-		<li><strong>Exploratory analysis</strong>: Start with <code>src/eda/Dataset_Statistics.ipynb</code> to
+		<li><strong>Exploratory analysis</strong>: Start with <code>src/eda/DatasetStatistics.ipynb</code> to
 			understand the raw data distributions and missingness.</li>
 		<li><strong>Feature engineering</strong>:
 			<ul>
@@ -500,7 +500,7 @@
 	</ul>
 	<h2 id="purpose-and-content-of-scripts">Purpose and Content of Scripts</h2>
 	<ul>
-		<li><strong>Dataset_Statistics.ipynb</strong> – descriptive stats, missing value checks, and sanity checks for
+		<li><strong>DatasetStatistics.ipynb</strong> – descriptive stats, missing value checks, and sanity checks for
 			the raw tables.</li>
 		<li><strong>FeatureEngineering.ipynb</strong> – merges purchases, prices, and reviews into analytical tables,
 			exporting <code>2_price_features.csv</code>, <code>3_purchase_features.csv</code>, etc.</li>
