add eval beyond metrics

--- a/Dataset and Script Guide.html
+++ b/Dataset and Script Guide.html
@@ -502,6 +502,8 @@
 			<ul>
 				<li><code>src/model/ContentBasedFiltering_Final.ipynb</code> builds similarity-based recommenders using
 					engineered features.</li>
+				<li><code>src/model/ContentBasedFiltering_BeyondAccuracyMetrics.ipynb</code> analyses recommender quality
+					using beyond-accuracy diagnostics such as diversity and novelty.</li>
 				<li><code>src/model/CollaborativeBasedFiltering.ipynb</code> experiments with matrix factorisation and
 					neighbourhood-based approaches.</li>
 			</ul>
@@ -525,6 +527,8 @@
 			<code>sentiment_analyser.py</code> (mandatory to run locally).
 		</li>
 		<li><strong>Sample1kTesting.ipynb</strong> – tests for the sentiment pipeline on the 1k review subset.</li>
+		<li><strong>ContentBasedFiltering_BeyondAccuracyMetrics.ipynb</strong> – evaluates recommender performance on
+			diversity, novelty, and other beyond-accuracy measures.</li>
 		<li><strong>ContentBasedFiltering_Final.ipynb / CollaborativeBasedFiltering.ipynb</strong> – evaluate
 			recommenders, calibrate hyperparameters, and export recommendation lists (e.g.,
 			<code>recommendations_for_all_players.csv</code>).
