add github link

--- a/Dataset and Script Guide.html
+++ b/Dataset and Script Guide.html
@@ -385,19 +385,20 @@
 			exceeds the maximum inactivity window on Google Colab.</p>
 	</blockquote>
 	<h2 id="table-of-contents">Table of Contents</h2>
-	<p><a href="#dataset-access">Dataset Access</a><br>
+	<p><a href="#dataset-access">Dataset and Code Access</a><br>
 		<a href="#dataset-purpose-and-content">Dataset Purpose and Content</a><br>
 		<a href="#repository-layout">Repository Layout</a><br>
 		<a href="#running-the-workflow">Running the Workflow</a><br>
 		<a href="#purpose-and-content-of-scripts">Purpose and Content of Scripts</a><br>
 		<a href="#reproducing-results">Reproducing Results</a><br>
 	</p>
-	<h2 id="dataset-access">Dataset Access</h2>
+	<h2 id="dataset-access">Dataset and Code Access</h2>
 	<p>Raw CSVs are hosted outside the repository because of size limits. Download them from the shared drive and place
 		them under <code>src/datasets</code>:</p>
 	<ul>
 		<li><a href="https://drive.google.com/drive/u/2/folders/1Hb68lcNCnkOnZKOcPtUTXIt3K4XvaMcb">BT4222 Group 9
 				Datasets (Google Drive)</a></li>
+		<li><a href="https://github.com/Huanqing-Mao/bt4222-steam-games">BT4222 Steam Games GitHub Repository (GitHub)</a></li>
 		<li>Keep filenames unchanged; the notebooks expect the naming convention shown in the repository layout.</li>
 	</ul>
 	<h2 id="dataset-purpose-and-content">Dataset Purpose and Content</h2>
